--- a/app/views/geolocations/show.html.erb
+++ b/app/views/geolocations/show.html.erb
@@ -21,11 +21,11 @@
 
 <h3>Nearby locations</h3>
 <ul>
-<% for location in @location.nearbys(10) %>
-  <li><%= link_to location.address, location %> (<%= location.distance.round(2) %> miles)</li>
+<% for geolocation in @location.nearbys(10) %>
+  <li><%= link_to location.address, geolocation %> (<%= location.distance.round(2) %> miles)</li>
 <% end %>
 </ul>
 
 
-<%= link_to 'Edit', edit_location_path(@location) %> |
-<%= link_to 'Back', locations_path %>
+<%= link_to 'Edit', edit_geolocation_path(@location) %> |
+<%= link_to 'Back', geolocations_path %>
