--- a/app/views/geolocations/_form.html.erb
+++ b/app/views/geolocations/_form.html.erb
@@ -1,5 +1,4 @@
 <%= form_for(@location) do |f| %>
-  debugger
   <% if @location.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@location.errors.count, "error") %> prohibited this location from being saved:</h2>
@@ -17,14 +16,20 @@
     <%= f.text_field :address %>
   </div>
   <div class="field">
-    <%= f.label :latitude %><br />
-    <%= f.text_field :latitude %>
+    <% f.label :latitude %><br />
+    <% f.text_field :latitude %>
   </div>
   <div class="field">
-    <%= f.label :longitude %><br />
-    <%= f.text_field :longitude %>
+    <% f.label :longitude %><br />
+    <% f.text_field :longitude %>
   </div>
   <div class="actions">
-    <%= f.submit %>
   </div>
+
+  <%= form_for @location, url: {action: "create"} do |location_form| %>
+    <%= location_form.text_field(:address) %>
+    <%= scene_form.text_field(:title) %>
+    <%= f.submit %>
+  <% end %>
+
 <% end %>
