--- a/app/views/geolocations/edit.html.erb
+++ b/app/views/geolocations/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @location %> |
+<%= link_to 'Show', @location %> 
 <%= link_to 'Back', geolocations_path %>
+
