--- a/app/views/geolocations/index.html.erb
+++ b/app/views/geolocations/index.html.erb
@@ -23,9 +23,11 @@
      <td><%=location.scenes.pluck(:title)[0]%>,</td>
      <td><%= location.address %></td>
      <td><%= link_to 'Show', location %></td>
+     <% if session[:user_id] %>
      <td><%= link_to 'Edit', edit_geolocation_path( location) %></td>
-     <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %>
-     </td>
+     <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+     <%= button_to 'Logout', logout_path, method: :delete %>
+     <% end %>
    </tr>
   <% end %>
   </table>
