--- a/app/views/geolocations/new.html.erb
+++ b/app/views/geolocations/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New location</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', geolocations_path %>
+<% if session[:user_id] %>
+  <h1>New location</h1>
+  <%= render 'form' %>
+  <%= link_to 'Back', geolocations_path %>
+  <%= button_to 'Logout', logout_path, method: :delete %>
+<% end %>
