--- a/app/views/geolocations/show.html.erb
+++ b/app/views/geolocations/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <b>Address:</b>
   <%= @location.address %>
+<p><%= @location.scenes.pluck(:title)[0]%></p>
 </p>
 
 <!-- <p>
@@ -22,10 +23,13 @@
 <h3>Nearby locations</h3>
 <ul>
 <% @location.nearbys(0.25).each do |location| %>
-  <li><%= link_to location.address %> (<%= location.distance.round(2) %> miles)</li>
+<li><%=location.scenes.pluck(:title)[0]%></li>
+  <li><%= link_to location.address, geolocation_path(location) %> (<%= location.distance.round(2) %> miles)</li>
 <% end %>
 </ul>
 
-
-<%= link_to 'Edit', edit_geolocation_path(@location) %> |
+<% if session[:user_id] %>
+<%= link_to 'Edit', edit_geolocation_path(@location) %> 
+<%= button_to 'Logout', logout_path, method: :delete %>
+<% end %>
 <%= link_to 'Back', geolocations_path %>
