--- a/app/views/geolocations/show.html.erb
+++ b/app/views/geolocations/show.html.erb
@@ -19,6 +19,7 @@
 
 <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@location.latitude}%2C#{@location.longitude}" %>
 
+<h3><%= link_to 'Click to see all the locations where this movie was shot', scene_path(@location) %></h3>
 
 <h3>Nearby locations</h3>
 <ul>
@@ -27,9 +28,17 @@
   <li><%= link_to location.address, geolocation_path(location) %> (<%= location.distance.round(2) %> miles)</li>
 <% end %>
 </ul>
-
+<%= form_tag geolocations_path, :method => :get do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search a New Address", :name => nil %>
+  </p>
+<% end %>
+<%= link_to 'Back', geolocations_path %>
 <% if session[:user_id] %>
 <%= link_to 'Edit', edit_geolocation_path(@location) %> 
 <%= button_to 'Logout', logout_path, method: :delete %>
 <% end %>
-<%= link_to 'Back', geolocations_path %>
+
+
+
