--- a/app/views/geolocations/index.html.erb
+++ b/app/views/geolocations/index.html.erb
@@ -8,7 +8,9 @@
 <% end %>
 
 <% if params[:search].present? == true %>
+  
   <% if @locations.present? %>
+  
   <table>
     <tr>
       <th>Movie</th>
@@ -18,10 +20,10 @@
       <th></th>
       <th></th>
     </tr>
-  <% if @locations.present? %>
+
   <% @locations.each do |location| %>
    <tr>
-     <td><%=location.scenes.pluck(:title)[0]%>,</td>
+     <td><%=location.scenes.pluck(:title)[0]%></td>
      <td><%= location.address %></td>
      <td><%= link_to 'Show all locations for this movie', scene_path(@location) %></td>
      <% if session[:user_id] %>
@@ -34,10 +36,12 @@
   </table>
   <% else %>
     <p>"There are no movie location near your location"</p>
-    <% end %>
+  <% end %>
 <% end %>
 <% if session[:user_id] %>
 <%= button_to 'Logout', logout_path, method: :delete %>
 <% end %>
+
+<%= link_to 'New Location', new_geolocation_path %>
 
 
