--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,10 @@
-<% if session[:user_id] %>
-  <h1>Editing user</h1>
-  
-  <%= render 'form' %>
-  
-  <%= link_to 'Show', @user %> |
-  <%= link_to 'Back', users_path %>
-<% end %>
+<div class="container">
+	<% if session[:user_id] %>
+	  <h1>Editing user</h1>
+	  
+	  <%= render 'form' %>
+	  
+	  <%= link_to 'Show', @user %> |
+	  <%= link_to 'Back', users_path %>
+	<% end %>
+</div>
