--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,32 @@
-<% if session[:user_id] %>
-  <h1>Listing users</h1>
-    <% if notice %>
-    <p id="notice"><%= notice %></p>
+<div class="container">
+  <% if session[:user_id] %>
+    <h1>Listing users</h1>
+      <% if notice %>
+      <p id="notice"><%= notice %></p>
+      <% end %>
+    
+    <table>
+      <tr>
+        <th>Name</th>
+        <th></th>
+        <th></th>
+        <th></th>
+      </tr>
+    
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.name %></td>
+        <td><%= user.password_digest %></td>
+        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: {   confirm: 'Are you sure?' } %></td>
+      </tr>
     <% end %>
-  
-  <table>
-    <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  
-  <% @users.each do |user| %>
-    <tr>
-      <td><%= user.name %></td>
-      <td><%= user.password_digest %></td>
-      <td><%= link_to 'Show', user %></td>
-      <td><%= link_to 'Edit', edit_user_path(user) %></td>
-      <td><%= link_to 'Destroy', user, method: :delete, data: {   confirm: 'Are you sure?' } %></td>
-    </tr>
+    </table>
+    
+    <br />
+    
+    <%= link_to 'New User', new_user_path %>
+    <%= button_to 'Logout', logout_path, method: :delete %>
   <% end %>
-  </table>
-  
-  <br />
-  
-  <%= link_to 'New User', new_user_path %>
-  <%= button_to 'Logout', logout_path, method: :delete %>
-<% end %>
+</div>
