--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,18 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+	<p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @user.name %>
-</p>
+	<p>
+	  <b>Name:</b>
+	  <%= @user.name %>
+	</p>
 
-<p>
-  <b>Password digest:</b>
-  <%= @user.password_digest %>
-</p>
+	<p>
+	  <b>Password digest:</b>
+	  <%= @user.password_digest %>
+	</p>
 
-<% if session[:user_id] %>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<% end %>
-<%= link_to 'Back', users_path %>
+	<% if session[:user_id] %>
+	<%= link_to 'Edit', edit_user_path(@user) %> |
+	<% end %>
+	<%= link_to 'Back', users_path %>
+</div>
