--- a/app/views/geolocations/show.html.erb
+++ b/app/views/geolocations/show.html.erb
@@ -14,9 +14,9 @@
     <div class="MovieDetails">
       <%= @movieAPIdata.year %><br>
       <%= @movieAPIdata.rating %><br>
-      <p>Movie Director will go here</p>
-      <p>Movie Rating will go here</p>
-      <p><a href=<%= @movieAPIdata.rt_link %> target="_blank">Visit the Rotten Tomatoes Page</a></p>
+<!--       <p>Movie Director will go here</p>
+      <p>Movie Rating will go here</p> -->
+      <p><a href=<%= @movieAPIdata.rt_link %>>Visit the Rotten Tomatoes Page</a></p>
     </div>
   </div>
 
