--- a/app/assets/stylesheets/nyc.css
+++ b/app/assets/stylesheets/nyc.css
@@ -1,22 +1,60 @@
-div {
-border:2px solid black;
-
+/*div.wrapper {
+border:2px solid yellow;
 }
 
+div.MovieData {
+border:2px solid red;
+}
+
+
+div.searchResults {
+border:2px solid green;  
+}
+
+div.GeoDetails {
+border:2px solid blue;  
+}
+
+div.container {
+  border:2px solid black; 
+}
+*/
+
+
 .container {
-  background-color: white;
   min-width: 36%;
+  width: 95%;
+  height: 100%;
   margin-left: auto ;
   margin-right: auto ;
+  position: absolute;
+  top: 23%;
+}
+
+.userInput {
+  background-color: #8F8F8F;
+  float: left;
+  padding: 2%;
+
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  border-style:groove;
+  border-color: #B8B8B8;
+  border-width:5px;
+
+/*Center of the monitor */
+    position: absolute;
+    left: 40%;
+    top: 1%;
+    z-index: 100;
+
+  display:inline;
+  text-align:center;
+  height: 10%;
 }
 
 /* movie results page */
-
-.MovieData {
-	float: left;
-  width: 50%;
-}
-
 .IndexMovieData {
   width: 100%;
 }
@@ -28,11 +66,19 @@ border:2px solid black;
   width: auto;
 }
 
+.wrapper .Poster {
+
+}
+
 img {
   min-width: 30%;
   max-width:100%;
-  height:auto;
   display:block;
+}
+
+.Poster img {
+  height: auto;
+  width: 440px;
 }
 
 .Poster {
@@ -43,49 +89,30 @@ img {
 .MovieData .MovieDetails {
   float: left;
   display: block;
- 
+  margin: 15px;
 
 }
 
 .GeoDetails {
-  float:left;
+  float:right;
   padding: 1%;
   min-width: 36%;
+  background-color: #fff;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 /* first search page */
 /* move last div to include new location 
   /* needs to be added to the intro page */
 .wrapper {
-  background-image:url('intro.jpg');
   width: 100%;
   height: 100%;
 
 }
 
 
-.wrapper .userInput {
-  background-color: #8F8F8F;
-  float: left;
-  padding: 2%;
-
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  border-radius: 25px;
-  border-style:groove;
-  border-color: #B8B8B8;
-  border-width:5px;
-
-/*Center of the monitor */
-/*    position: fixed;
-    left: 40%;
-    top: 2%;
-    z-index: 100;*/
-
-
-  text-align:center;
-
-}
 
 .Preview {
   width: 50%;
@@ -102,5 +129,18 @@ img {
 
 }
 
+.searchResults {
+background-color: #fff;
+-webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;
 
+}
 
+.wrapper .Poster {
+  margin-left: 20%;
+}
+
+.wrapper .GeoDetails {
+  margin-right: 10%;
+}
