--- a/app/views/geolocations/index.html.erb
+++ b/app/views/geolocations/index.html.erb
@@ -1,3 +1,5 @@
+<body background="<%= asset_path( '1.jpg' ) %>">
+
 <div class="wrapper">
   <div class="container">
 
@@ -37,25 +39,24 @@
 
 <!-- Map preview if no search given -->
        <% if params[:search].present? == false %>
-          <div class="IndexMovieData">
-            <div class="Poster">
-              <p><img src=<%= @movieAPIdata.poster %>></p>
-            </div>
-
-
             <div class="GeoDetails">
-                <p><b>Film:</b>
+                <b>Film:</b>
                 <%= @preview.scenes.pluck(:title)[0]%>
-                </p>
-                <p><b>Address:</b>
-                <%= @preview.address %></p>
-              <%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@preview.latitude}%2C#{@preview.longitude}" %>
+                <br><b>Address:</b>
+                <%= @preview.address %>
+              <p><%= image_tag "http://maps.google.com/maps/api/staticmap?size=450x300&sensor=false&zoom=16&markers=#{@preview.latitude}%2C#{@preview.longitude}" %></p>
             </div>
+            <div class="MovieData">
+            <div class="Poster">
+<!--               check if poster is available -->
+              <% if @movieAPIdata.poster == "http://images.rottentomatoescdn.com/images/redesign/poster_default.gif" %>
+                <b>Poster currently unavailable</b>
+              <% else %> 
+                <p><img src=<%= @movieAPIdata.poster %>></p>
+              <% end %>
+            </div>           
           </div>
-
        <% end %>
-
-    </div>
     </div>
   </div>
 </div>
