--- a/app/views/geolocations/show.html.erb
+++ b/app/views/geolocations/show.html.erb
@@ -1,19 +1,31 @@
 <div class="container">
 
   <div class="MovieSelected">
-  	<p><%= @location.scenes.pluck(:title)[0]%></p>
+  	<h1>
+      <p><%= @location.scenes.pluck(:title)[0]%></p>
+    </h1>
   	<p>
     <%= @movieAPIdata.synopsis %></p>
   </div>
 
   <div class="MovieData">
     <div class="Poster">
-      <p><img src=<%= @movieAPIdata.poster %>></p>
+<!--               check if poster is available -->
+      <% if @movieAPIdata.poster == "http://images.rottentomatoescdn.com/images/redesign/poster_default.gif" %>
+        <b>Poster currently unavailable</b>
+      <% else %> 
+        <p><img src=<%= @movieAPIdata.poster %>></p>
+      <% end %>
     </div>
 
     <div class="MovieDetails">
-      <%= @movieAPIdata.year %><br>
-      <%= @movieAPIdata.rating %><br>
+      Film Rating:   <%= @movieAPIdata.rating %><br>
+      Year Released: <%= @movieAPIdata.year %><br>
+      Year Runtime: <%= @movieAPIdata.runtime %><br>
+
+      <br><br>
+       <i> User Input and filter results go here</i>
+      <br><br>
 <!--       <p>Movie Director will go here</p>
       <p>Movie Rating will go here</p> -->
       <p><a href=<%= @movieAPIdata.rt_link %>>Visit the Rotten Tomatoes Page</a></p>
@@ -33,11 +45,5 @@
   	</ul>
   </div>
 
-  <div class="UserOptions">
-  	<% if session[:user_id] %>
-  	<%= link_to 'Edit', edit_geolocation_path(@location) %> 
-  	<%= button_to 'Logout', logout_path, method: :delete %>
-  	<% end %>
-  	<%= link_to 'Back', geolocations_path %>
-  </div>
+
 </div>
