--- a/app/views/geolocations/show.html.erb
+++ b/app/views/geolocations/show.html.erb
@@ -24,7 +24,7 @@
       Year Runtime: <%= @movieAPIdata.runtime %><br>
 
       <br><br>
-       <i> User Input and filter results go here</i>
+       <!-- <i> User Input and filter results go here</i> -->
       <br><br>
 <!--       <p>Movie Director will go here</p>
       <p>Movie Rating will go here</p> -->
