--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,22 +10,12 @@
 <body>
     <div class="userInput">
       <h1>On the Scene</h1>
-
       <%= form_tag geolocations_path, :method => :get do %>
         <p>
           <%= text_field_tag :search, params[:search] %>
-          <%= submit_tag "Search", :name => nil %>
+          <%= submit_tag "Search Address", :name => nil %>
         </p>
       <% end %>
-        <div class="UserOptions">
-          <% if session[:user_id] %>
-          <%= link_to 'Edit', edit_geolocation_path(@location) %> 
-          <%= button_to 'Logout', logout_path, method: :delete %>
-          <% end %>
-          <% if params[:search].present? == true %>
-            <%= link_to 'Back', geolocations_path %>
-          <% end %>
-        </div>
     </div>
 <%= yield %>
 
